<resources>
    <string name="app_name">FootballApi</string>
    <string name="app_name_info_football">Info Football</string>
    <string name="get_started">GET STARTED</string>
    <string name="title_setting_item_menu">Settings</string>
    <string name="title_menu_home">Home</string>
    <string name="title_item_menu_news">News</string>
    <string name="title_item_menu_analytics">Analytics</string>
    <string name="title_item_menu_profile">Profile</string>

    <!--    Matches Screen-->
    <string name="text_your_matches">YOUR MATCHES</string>
    <string name="message_success_state_default">Success</string>
    <string name="message_error_state_default">Error</string>
    <string name="text_score_item_match">%d X %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_match_screen_head_to_head">Head to Head</string>
    <string name="text_wins_head_to_head">WINS</string>
    <string name="text_draw_head_to_head">DRAW</string>
    <string name="text_n_of_matches_head_to_head">Nº OF MATCHES:</string>
</resources>