<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_graph"
    app:startDestination="@id/matchesFragment">
    <fragment
        android:id="@+id/matchesFragment"
        android:name="br.com.joaovitorqueiroz.footballapi.ui.matches.view.MatchesFragment"
        android:label="@string/app_name_info_football"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="br.com.joaovitorqueiroz.footballapi.ui.analytics.view.AnalyticsFragment"
        android:label="@string/title_item_menu_analytics"
        tools:layout="@layout/fragment_analytics" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="br.com.joaovitorqueiroz.footballapi.ui.news.view.NewsFragment"
        android:label="@string/title_item_menu_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="br.com.joaovitorqueiroz.footballapi.ui.profile.view.ProfileFragment"
        android:label="@string/title_item_menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>