<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="match"
            type="br.com.joaovitorqueiroz.footballapi.ui.matchscreen.domain.model.Match" />

        <variable
            name="head2Head"
            type="br.com.joaovitorqueiroz.footballapi.ui.matchscreen.domain.model.Head2Head" />
    </data>

    <androidx.cardview.widget.CardView
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary_brand"
        android:orientation="vertical"
        android:padding="@dimen/space_20dp"
        android:theme="@style/Theme.MaterialComponents.BottomSheetDialog"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/bottom_sheet_peek_height_head_2_head"
        app:behavior_saveFlags="all|skipCollapsed"
        app:behavior_skipCollapsed="true"
        app:cardCornerRadius="30dp"
        android:elevation="10dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:showIn="@layout/fragment_match">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="@dimen/width_guide_bottom_sheet"
                android:layout_height="@dimen/height_guide_bottom_sheet"
                android:layout_marginTop="@dimen/space_14dp"
                android:foreground="@color/color_secondary_brand"
                app:layout_constraintBottom_toTopOf="@id/title_head_to_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_home_team_head"
                android:layout_width="@dimen/iv_emblem_size"
                android:layout_height="@dimen/iv_emblem_size"
                app:layout_constraintBottom_toBottomOf="@id/text_wins_home_head_to_head"
                app:layout_constraintEnd_toStartOf="@id/number_wins_home_head_to_head"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/number_wins_home_head_to_head"
                app:srcCompat="@drawable/logo_vitoria"
                app:urlImg="@{match.homeTeam.crest ?? ``}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_head_to_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_family"
                android:padding="@dimen/space_14dp"
                android:text="@string/title_match_screen_head_to_head"
                android:textColor="@color/color_secondary_brand"
                android:textSize="@dimen/text_subject18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/number_draw_head_to_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/number_wins_home_head_to_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/road_rage_regular"
                android:paddingHorizontal="@dimen/space_14dp"
                android:text="@{head2Head.aggregates.homeTeam.wins.toString()}"
                android:textColor="@color/color_secondary_brand"
                android:textSize="@dimen/text_title"
                app:layout_constraintBottom_toTopOf="@id/text_wins_home_head_to_head"
                app:layout_constraintEnd_toStartOf="@id/left_divider"
                app:layout_constraintStart_toEndOf="@id/iv_home_team_head"
                app:layout_constraintTop_toTopOf="@id/left_divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_wins_home_head_to_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/road_rage_regular"
                android:padding="@dimen/space_text_head_to_head"
                android:text="@string/text_wins_head_to_head"
                android:textColor="@color/color_secondary_brand"
                android:textSize="@dimen/text_title"
                app:layout_constraintBottom_toBottomOf="@id/left_divider"
                app:layout_constraintEnd_toStartOf="@id/left_divider"
                app:layout_constraintStart_toEndOf="@id/iv_home_team_head"
                app:layout_constraintTop_toBottomOf="@id/number_wins_home_head_to_head" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/right_divider"
                android:layout_width="@dimen/width_divider_head_to_head"
                android:layout_height="0dp"
                android:foreground="@color/color_secondary_brand"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/text_draw_head_to_head"
                app:layout_constraintEnd_toStartOf="@id/number_wins_away_head_to_head"
                app:layout_constraintStart_toEndOf="@id/number_draw_head_to_head"
                app:layout_constraintTop_toTopOf="@id/number_draw_head_to_head" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/number_wins_away_head_to_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/road_rage_regular"
                android:paddingHorizontal="@dimen/space_14dp"
                android:text="@{head2Head.aggregates.awayTeam.wins.toString()}"
                android:textColor="@color/color_secondary_brand"
                android:textSize="@dimen/text_title"
                app:layout_constraintBottom_toTopOf="@id/text_wins_away_head_to_head"
                app:layout_constraintEnd_toStartOf="@id/iv_away_team_head"
                app:layout_constraintStart_toEndOf="@id/right_divider"
                app:layout_constraintTop_toTopOf="@id/right_divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_wins_away_head_to_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/road_rage_regular"
                android:padding="@dimen/space_text_head_to_head"
                android:text="@string/text_wins_head_to_head"
                android:textColor="@color/color_secondary_brand"
                android:textSize="@dimen/text_title"
                app:layout_constraintBottom_toBottomOf="@id/right_divider"
                app:layout_constraintEnd_toStartOf="@id/iv_away_team_head"
                app:layout_constraintStart_toEndOf="@id/right_divider"
                app:layout_constraintTop_toBottomOf="@id/number_wins_away_head_to_head" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/left_divider"
                android:layout_width="@dimen/width_divider_head_to_head"
                android:layout_height="0dp"
                android:foreground="@color/color_secondary_brand"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/text_draw_head_to_head"
                app:layout_constraintEnd_toStartOf="@id/number_draw_head_to_head"
                app:layout_constraintStart_toEndOf="@id/number_wins_home_head_to_head"
                app:layout_constraintTop_toTopOf="@id/number_draw_head_to_head" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_number_of_matches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@{@string/text_n_of_matches_head_to_head+head2Head.aggregates.numberOfMatches.toString()}"
                android:textAppearance="@style/TextBody"
                android:padding="@dimen/space_10dp"
                android:textColor="@color/color_secondary_brand"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/number_draw_head_to_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_head_to_head" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/number_draw_head_to_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/road_rage_regular"
                android:paddingHorizontal="@dimen/space_14dp"
                android:text="@{head2Head.aggregates.homeTeam.draws.toString()}"
                android:textColor="@color/color_secondary_brand"
                android:textSize="@dimen/text_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_draw_head_to_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/road_rage_regular"
                android:padding="@dimen/space_text_head_to_head"
                android:text="@string/text_draw_head_to_head"

                android:textColor="@color/color_secondary_brand"
                android:textSize="@dimen/text_title"
                app:layout_constraintEnd_toEndOf="@id/number_draw_head_to_head"
                app:layout_constraintStart_toStartOf="@id/number_draw_head_to_head"
                app:layout_constraintTop_toBottomOf="@id/number_draw_head_to_head" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_away_team_head"
                android:layout_width="@dimen/iv_emblem_size"
                android:layout_height="@dimen/iv_emblem_size"
                app:layout_constraintBottom_toBottomOf="@id/text_wins_away_head_to_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/number_wins_away_head_to_head"
                app:layout_constraintTop_toTopOf="@id/number_draw_head_to_head"
                app:srcCompat="@drawable/logo_vitoria"
                app:urlImg="@{match.awayTeam.crest ?? ``}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>